@@ -38,27 +38,6 @@ pipeline {
                 }
             }
         }
-        
-        stage('Build01') {
-            withMaven(maven: 'apache-maven-3.6.3',
-                  mavenOpts: '-Xmx1g -XX:MaxPermSize=256m -XX:+CMSClassUnloadingEnabled'
-                  //jdk: 'JDK-1.8',
-                  //globalMavenSettingsConfig: "${efx_settings}"){ // 全局弄了一个settings.xml， Settings.xml 的ID来的
-                  //globalMavenSettingsConfig: ""){
-		  ){
-                      try{
-                          //notifyBitbucket() //tifies the Stash Instance of an INPROGRESS build
-                          //sh "mvn -B clean install -Drevision=\"${revision}\""
-                          sh "mvn --version"
-                      } catch (ex) {
-                          //currentBuild.result = 'FAILED'
-                          throw ex
-                      } finally {
-                          //notifyBitbucket(considerUnstableAsSuccess: true) // Notifies the stash instance of build result
-                      }
-              }
-              //currentBuild.result = 'SUCCESS'
-	    }
 
         stage("01"){
             failFast true
